# SternhalmaEnv

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt  sternhalma_v0.py  usage_example.py
.github/workflows/: tests.yml
sternhalma/env/: __init__.py  rllib_wrapper.py  sternhalma.py
sternhalma/utils/: board.py  grid.py  player.py  types.py
tests/: test_board.py  test_discrete_action_wrapper.py  test_env.py  test_rllib_wrapper.py
