[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sternhalma-env"
version = "0.1.1"
description = "PettingZoo AEC environment for Sternhalma (Chinese Checkers)"
readme = "README.md"
requires-python = ">=3.9"
license = { file = "LICENSE" }
authors = [
  { name = "SternhalmaEnv contributors" }
]
dependencies = [
  "cloudpickle==3.0.0",
  "Farama-Notifications==0.0.4",
  "gymnasium==1.2.2",
  "numpy==1.26.4",
  "pettingzoo==1.24.3",
  "pygame==2.5.2",
  "typing_extensions==4.15.0",
]
keywords = ["pettingzoo", "multi-agent", "reinforcement-learning", "chinese-checkers", "sternhalma"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
]

[tool.setuptools]
py-modules = ["sternhalma_v0"]

[tool.setuptools.packages.find]
include = ["sternhalma*"]
